# cares_reinforcement_learning

./: .dockerignore  .gitignore  .mypy.ini  .pylintrc  .pytest.ini  CONTRIBUTING.md  DDPG.py  DQN.py  Dockerfile  LICENSE  README.md  TD3Agent.py  benchmark.sh  mkdocs.yml  networks.py  pyproject.toml  requirements.txt  requirements_conda.txt  run.py  setup.py  utils.py
.github/: pull_request_template.md
agents/: Agent.py  DDPGAgent.py  DQNAgent.py  DoubleDQNAgent.py  TD3Agent.py  __init__.py
buffer_exports_sil/: batch_1.csv  batch_2.csv  batch_3.csv  batch_4.csv  batch_5.csv
cares_reinforcement_learning/: __main__.py  cross_marl_composer.py  plotter.py  run.py
cares_rl_configs/: DDPG_algorithm_config.json  EpisodicTD3_algorithm_config.json  MAPERTD3_algorithm_config.json  MBRL_algorithm_config.json  MBRL_env_config.json  MBRL_training_config.json  RDSAC_algorithm_config.json  RDTD3_algorithm_config.json  ReTD3_algorithm_config.json  SAC_algorithm_config.json  TD3_algorithm_config.json  sac_training_config.json  training_config.json
complete/: DDPG.py  DQN.py  DoubleDQN.py  DuelingDQN.py  __init__.py
configs/: env_dmcs_config.json  env_openai_config.json  training_config.json
docs/: index.md
example/: PER_example.py  example_training_loop.py  example_training_loop_OnPolicy.py  example_training_loop_discrete_actions.py  example_training_loops.py  logger_example.py  policy_example.py  ppo_example.py  record_example.py  value_example.py
examples/: Actor.py  Critic.py  Gaussian_actor.py  PPOActor.py  README.md  SAC_development.py  example_training_loop.py  (+2 more)
(+595 files in other folders)
