[build-system]
requires = ["setuptools>=68,<82", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cares_reinforcement_learning"
version = "3.0.0"
description = "CARES Reinforcement Learning library + Gymnasium environments"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}  # adjust if needed
authors = [{name = "UoA-CARES"}]

dependencies = [
  "numpy==1.26.4",
  "pydantic==2.12.4",
  "PyYAML==6.0.1",
  "torch==2.7.0",
  "rich==14.2.0",
  "opencv-contrib-python==4.6.0.66",
  "mediapy==1.1.9",
  "scikit_image==0.25.2",
  "matplotlib==3.10.1",
  "seaborn==0.13.0",
  "pandas==1.5.3",
  "natsort==8.4.0",
  "pytest==7.4.2",
  # keep truly runtime-only deps here
]

[project.optional-dependencies]
gym = [
  "gymnasium[mujoco,classic-control]==1.1.1",
  "mujoco==3.2.6",
  "dm_control==1.0.26",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["cares_reinforcement_learning*"]

[tool.setuptools.package-data]
"cares_reinforcement_learning" = ["py.typed"]

[project.scripts]
cares-rl = "cares_reinforcement_learning.run:main_with_runner"
cares-rl-plot = "cares_reinforcement_learning.plotter:main"